# news-trading-bot

./: .env.example  .gitignore  README.md  SECURITY_AUDIT.md  check.py  check_alpaca.py  check_bars.py  docker-compose.yml  pyproject.toml  test_config.py
hermes_service/: Dockerfile  main.py
src/: config.py  main.py
src/alerts/: __init__.py  discord.py
src/broker/: __init__.py  alpaca_broker.py  ibkr_broker.py  interface.py
src/market/: __init__.py  indicators.py
src/news/: __init__.py  aggregator.py  base.py  finnhub_source.py  rss_source.py
src/sentiment/: __init__.py  finbert.py  preprocessor.py  scorer.py
src/storage/: __init__.py  database.py  models.py
src/strategy/: __init__.py  risk_manager.py  signals.py
tests/: conftest.py  test_config.py  test_market_hours.py
tests/test_alerts/: test_discord.py
tests/test_broker/: test_alpaca.py  test_interface.py
tests/test_market/: test_indicators.py
tests/test_news/: test_aggregator.py  test_base.py  test_finnhub.py  test_rss.py
tests/test_sentiment/: test_finbert.py  test_preprocessor.py  test_scorer.py
tests/test_storage/: test_models.py
tests/test_strategy/: test_risk_manager.py  test_signals.py
